--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ h2{
     padding-top: 10px;
     background-color: rgb(1, 1, 68);
     text-align: center;
-    margin: 0;
+    padding-bottom: 20px;
 }
 .footer-main p{
     color: white;
